--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BeerReal</string>
+    <string name="google_maps_key">key-here</string>
+    <string name="allow_location">Allow Location</string>
+    <string name="you_are_here">You</string>
 </resources>
